--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -18,7 +18,7 @@
         var playerXpos = 0;
         var playerYpos = 0;
         var playerXspeed = 0;
-
+        var playerYspeed = 0;
 
 
         function mainloop() {
