--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -19,10 +19,12 @@
         var playerYpos = 0;
         var playerXspeed = 0;
         var playerYspeed = 0;
+        var PLAYER_SIZE = 20;
 
 
         function mainloop() {
-            colorRect(0, 0, canvas.width, canvas.height, 'black'); // bg
+            colorRect(0, 0, canvas.width, canvas.height, 'black'); // big
+            
 
         }
 
