--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <body>
-    <canvas id="gameCanvas" width="600" height="600"></canvas>
+    <canvas id="gameCanvas" width="1900" height="940"></canvas>
     <script>
         var canvas, canvasContext;
 
@@ -13,19 +13,22 @@
         }
 
 
-
-
-        var playerXpos = 0;
-        var playerYpos = 0;
+        var playerXpos = 300;
+        var playerYpos = 400;
         var playerXspeed = 0;
         var playerYspeed = 0;
-        var PLAYER_SIZE = 20;
+        var PLAYER_SIZE = 1;
+
+        const D_KEY = 68;
+        const A_KEY = 65;
+        const SPACE_KEY = 32;
+
 
 
         function mainloop() {
             colorRect(0, 0, canvas.width, canvas.height, 'black'); // big
             colorRect(playerXpos, playerYpos, PLAYER_SIZE, PLAYER_SIZE, 'red');
-            
+
 
         }
 
