--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -9,6 +9,11 @@
             canvas = document.getElementById('gameCanvas');
             canvasContext = canvas.getContext('2d');
 
+
+            document.addEventListener('keydown', keyPressed);
+            document.addEventListener('keyup', keyReleased);
+
+
             setInterval(mainloop, 1000 / 50);
         }
 
@@ -17,11 +22,15 @@
         var playerYpos = 400;
         var playerXspeed = 0;
         var playerYspeed = 0;
-        var PLAYER_SIZE = 1;
+        var PLAYER_SIZE = 20;
 
         const D_KEY = 68;
         const A_KEY = 65;
         const SPACE_KEY = 32;
+
+        var dKeyPressed = false;
+        var aKeyPressed = false
+        var spaceKeyPressed = false;
 
 
 
@@ -30,11 +39,44 @@
             colorRect(playerXpos, playerYpos, PLAYER_SIZE, PLAYER_SIZE, 'red');
 
 
+
+            function colorRect(x, y, w, h, c) {
+                canvasContext.fillStyle = c;
+                canvasContext.fillRect(x, y, w, h);
+            }
         }
 
-        function colorRect(x, y, w, h, c) {
-            canvasContext.fillStyle = c;
-            canvasContext.fillRect(x, y, w, h);
+
+        function keyPressed(evt) {
+            if (evt.keyCode == D_KEY) {
+                dKeyPressed = true;
+            }
+
+            if (evt.keyCode == A_KEY) {
+                aKeyPressed = true;
+            }
+
+            if (evt.keyCode == SPACE_KEY) {
+                spaceKeyPressed = true;
+            }
         }
+
+        function keyReleased(evt) {
+            if (evt.keyCode == D_KEY) {
+                dKeyPressed = false;
+            }
+            if (evt.keyCode == A_KEY) {
+                aKeyPressed = false;
+            }
+            if (evt.keyCode == SPACE_KEY) {
+                spaceKeyPressed = false;
+            }
+        }
+
+        
+
+
+
+        
     </script>
 </body>
