--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -20,7 +20,7 @@
 
         var playerXpos = 0;
         var playerYpos = 0;
-        var playerXspeed = 5;
+        var playerXspeed = 10;
         var playerYspeed = 5;
         var PLAYER_SIZE = 20;
 
@@ -78,13 +78,13 @@
 
         function PlayerMove() {
 
-            if (dKeyPressed) {
+            if (dKeyPressed && playerXpos < canvas.width * .985) {
                 playerXpos += playerXspeed
             }
-            if (aKeyPressed) {
+            if (aKeyPressed && playerXpos > canvas.width * .001) {
                 playerXpos -= playerXspeed
             }
-            if (spaceKeyPressed) {
+            if (spaceKeyPressed && playerYpos > canvas.height * .975) {
                 playerYpos -= playerYspeed 
             }
 
