changed jump function to have a cooldown for jumping

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -85,7 +85,7 @@
             if (aKeyPressed && playerXpos > canvas.width * .001) {
                 playerXpos -= playerXspeed
             }
-            if (spaceKeyPressed) {
+            if (spaceKeyPressed && playerYpos > 915) {
                 playerYspeed = -7;
             }
 
