--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -34,7 +34,9 @@
         var swordYpos = 200;
         var SWORD_SIZE = 0;
 
-       
+        var enemyXpos = 100;
+        var enemyYpos = 100;
+        var ENEMY_SIZE = 500;
 
 
         const D_KEY = 68;
@@ -54,6 +56,7 @@
             colorRect(0, 0, canvas.width, canvas.height, 'black'); // big
             colorRect(playerXpos, playerYpos, PLAYER_SIZE, PLAYER_SIZE, 'white');
             colorRect(swordXpos, swordYpos, SWORD_SIZE, SWORD_SIZE, 'grey');
+            colorRect(enemyXpos, enemyYpos, ENEMY_SIZE, ENEMY_SIZE, 'blue');
             PlayerMove()
 
 
@@ -139,6 +142,8 @@
 
             } */
         }
+
+        
 
     </script>
 </body>
