made score variable

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -58,6 +58,8 @@
 
         var gameRun = true;
 
+        var score = 0
+
         var background1 = new Image();
         background1.src = "images/background1.png";
 
@@ -249,7 +251,6 @@
                 enemyYpos < swordYpos + SWORD_HEIGHT &&
                 enemyYpos + ENEMY_HEIGHT > swordYpos) {
                 console.log("hit");
-            
             }
             
 
