made boss go back to edge of canvas when goes off screen

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -235,6 +235,11 @@
         function BossMove() {
 
             bossXpos -= bossXspeed
+
+
+            if (bossXpos < canvas.width * -0.05) {
+                bossXpos = canvas.width * 1.1;
+            }
         }
 
         function EnemyMove() {
