made new image variable for win screen

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -63,13 +63,16 @@
         var backspaceKeyPressed = false;
 
 
-        var bosshp = 200;
+        var bosshp = 20;
 
         var background1 = new Image();
         background1.src = "images/background1.png";
 
         var gameover = new Image();
         gameover.src = "images/gameover.png";
+
+        var gamwin = new Image();
+        gameover.src = "images/gamewin.png";
 
         var enemy = new Image();
         enemy.src = "images/enemy.png";
